--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,14 @@ body {
     justify-content: center;
 }
 
+/* Signup page*/
+.sign-page {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+
 /* Home Page */
 .intro {
     display: flex;
