--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,22 +1,45 @@
-<form method="POST" action="/signup">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username" placeholder="Randy Marsh">
-    <label for="user-email">Email</label>
-    <input type="email" name="email" id="user-email" placeholder="iamlorde@yahoo.com">
-    <label for="user-pass">Password</label>
-    <input type="password" name="password" id="user-pass" placeholder="*******">
-    <label for="currency" >Currency</label>
-    <select name="currency" id="currency" placeholder="Select currency">
-        <option value="EUR">EUR €</option>
-        <option value="GBP">GBP £</option>
-        <option value="USD">USD $</option>
-        <option value="YEN">YEN ¥</option>
-        <option value="CHF">CHF</option>
-        <option value="INR">INR ₹</option>
-    </select>
-    <button type="submit">Sign Up</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
 
-{{#if errorMessage}}
-<div class="error">{{errorMessage}}</div>
-{{/if}}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Show Me the Money</title>
+    {{!-- Bootstrap --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    {{!-- Google Fonts --}}
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap"
+        rel="stylesheet">
+    {{!-- Font Awesome Icons --}}
+    <script src="https://kit.fontawesome.com/a337f7a40e.js" crossorigin="anonymous"></script>
+    {{!-- CSS Stylesheet --}}
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
+    <form method="POST" action="/signup">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username" placeholder="Randy Marsh">
+        <label for="user-email">Email</label>
+        <input type="email" name="email" id="user-email" placeholder="iamlorde@yahoo.com">
+        <label for="user-pass">Password</label>
+        <input type="password" name="password" id="user-pass" placeholder="*******">
+        <label for="currency">Currency</label>
+        <select name="currency" id="currency" placeholder="Select currency">
+            <option value="EUR">EUR €</option>
+            <option value="GBP">GBP £</option>
+            <option value="USD">USD $</option>
+            <option value="YEN">YEN ¥</option>
+            <option value="CHF">CHF</option>
+            <option value="INR">INR ₹</option>
+        </select>
+        <button type="submit">Sign Up</button>
+    </form>
+
+    {{#if errorMessage}}
+    <div class="error">{{errorMessage}}</div>
+    {{/if}}
+</body>
+
+</html>
