--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
 }
 
-/* Signup page*/
+/* Signup and signup page*/
 .sign-page {
     display: flex;
     justify-content: center;
