--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -31,9 +31,14 @@
             </div>
         </form>
     </div>
+
     {{#if errorMessage}}
     <div class="error">{{errorMessage}}</div>
     {{/if}}
+
+    <footer class="fixed-bottom">
+        <p>&copy; &#36;how-Me-the-Money-Team 2020</p>
+    </footer>
 </body>
 
 </html>
