--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,8 +19,7 @@
 
 <body>
     {{!-- Navigation bar --}}
-    <div class="navigation-bar sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-bg">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-bg sticky-top">
             <div class="collapse navbar-collapse navbar-items-position" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -36,7 +35,6 @@
                 </ul>
             </div>
         </nav>
-    </div>
 
     {{{body}}}
 
