--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -31,6 +31,7 @@
             </div>
             <div class="form-group sign-page">
                 <select name="currency" id="currency" class="create-form-item">
+                <option value="" disabled selected hidden>Select currency</option>
                 <option value="EUR">EUR €</option>
                 <option value="GBP">GBP £</option>
                 <option value="USD">USD $</option>
@@ -46,10 +47,13 @@
         </form>
     </div>
 
-
     {{#if errorMessage}}
     <div class="error">{{errorMessage}}</div>
     {{/if}}
+
+    <footer class="fixed-bottom">
+        <p>&copy; &#36;how-Me-the-Money-Team 2020</p>
+    </footer>
 </body>
 
 </html>
