--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <div>
     <header class="header">
         <h1>Show me the money</h1>
-        <h4 class="h4-landing">Expense tracker to analyse your budget and get your shit together</h4>
+        <h4 class="h4-landing">Expense tracker to analyse your budget and get your &#36;&#36;&#36; together</h4>
         <div class='gif-landing'><img src="https://media.giphy.com/media/9HQRIttS5C4Za/giphy.gif"
                 alt="Too bad, can't see Tom Cruise GIF"></div>
     </header>
