--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,34 @@
-<div>
-    <header class="header">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing page</title>
+    {{!-- Bootstrap --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    {{!-- Google Fonts --}}
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap"
+        rel="stylesheet">
+    {{!-- Font Awesome Icons --}}
+    <script src="https://kit.fontawesome.com/a337f7a40e.js" crossorigin="anonymous"></script>
+    {{!-- CSS Stylesheet --}}
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
+    <nav class="nav-landing">
         <h1>Show me the money</h1>
-        <h4 class="h4-landing">Expense tracker to analyse your budget and get your shit together</h4>
-        <div class='gif-landing'><img src="https://media.giphy.com/media/9HQRIttS5C4Za/giphy.gif"
-                alt="Too bad, can't see Tom Cruise GIF"></div>
+        <h6>Expense tracker to analyse your budget and get your $$ together</h6>
+        <img class='gif-landing' src="https://media.giphy.com/media/9HQRIttS5C4Za/giphy.gif"
+            alt="Too bad, can't see Tom Cruise GIF">
+    </nav>
+    <header id="landing">
+        <a href="/signin"> <button type="submit" class="btn btn-info filter-btn btn-xlg ">Sign up</button></a>
+        <a href="/signup"><button type="submit" class="btn btn-outline-info filter-btn btn-xlg">Sign in</button></a>
+
     </header>
+</body>
 
-    <div class="landing-container">
-
-        <a href="/signup"><button type="button" class="btn btn-primary btn-lg">Sign up</button></a>
-        <a href="/signin"><button type="button" class="btn btn-secondary btn-lg">Sign in</button></a>
-    </div>
-</div>
-</div>
+</html>
