--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,22 +19,25 @@
 
 <body>
     {{!-- Navigation bar --}}
-        <nav class="navbar navbar-expand-lg navbar-light navbar-bg sticky-top">
-            <div class="collapse navbar-collapse navbar-items-position" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/home"><i class="fas fa-home fa-2x fa-nav-home"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/createTrans"><i
-                                class="fas fa-plus-circle fa-2x fa-nav-create"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fa-2x fa-nav-diagram"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-bg fixed-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse navbar-items-position" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home"><i class="fas fa-home fa-2x fa-nav-home"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/createTrans"><i class="fas fa-plus-circle fa-2x fa-nav-create"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fa-2x fa-nav-diagram"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     {{{body}}}
 
