Format date and prepopulate

--- a/views/editTrans.hbs
+++ b/views/editTrans.hbs
@@ -35,7 +35,7 @@
                 class="create-form-item">
         </div>
         <div class="form-group">
-            <input type="date" name="date" id="date" required pattern="dd-mm-yyyy" value="{{transaction.date}}"
+            <input type="date" name="date" id="date" required pattern="dd-mm-yyyy" value="{{formattedDate}}"
                 class="create-form-item">
         </div>
         <div>
