--- a/views/diagrams.hbs
+++ b/views/diagrams.hbs
@@ -8,14 +8,18 @@
 </head>
 
 <body>
-    <div class="diagram-page container">
-        <div class="intro">
-            <h2>Statistics</h2>
-            <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
-        </div>
+    <div class="center-container">
+        <div class="diagram-page container">
+            <div class="intro">
+                <h2>Statistics</h2>
+                <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
+            </div>
 
-        <canvas id="pieChart" style="display: block; height: 179px; width: 358px;" width="300" height="120"></canvas>
+            <canvas id="pieChart" style="display: block; height: 179px; width: 358px;" width="300"
+                height="120"></canvas>
+        </div>
     </div>
+
 
     <script src="/javascripts/diagram.js"></script>
 </body>
