--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,18 +26,14 @@
         <div class="col-4 header-tom">
             <img class='gif-landing' src="https://media.giphy.com/media/9HQRIttS5C4Za/giphy.gif"
                 alt="Too bad, can't see Tom Cruise GIF">
+            <aside>
+                <p>This app &#36;hows me my money !</p>
+                <small>- Tom Cruise</small>
+            </aside>
         </div>
     </nav>
 
-    
-
     <header id="landing">
-         <div class="quote">
-         <aside>
-             <p>This app shows me my money !</p>
-            <small>- Tom Cruise</small>
-         </aside>
-    </div>
         <div class="landing-btn">
             <a href="/signup"> <button type="submit" class="btn btn-info filter-btn btn-xlg ">Sign up</button></a>
             <a href="/signin"><button type="submit" class="btn btn-outline-info filter-btn btn-xlg">Sign in</button></a>
@@ -46,8 +42,8 @@
         </div>
     </header>
 
-
     <footer class="landing-footer">
         <p>&copy; &#36;how-Me-the-Money-Team 2020</p>
     </footer>
 </body>
+</html>
