--- a/views/createTrans.hbs
+++ b/views/createTrans.hbs
@@ -39,8 +39,8 @@
             <input type="date" name="date" id="date" required pattern="dd-mm-yyyy" class="create-form-item">
         </div>
         <div>
-            <button type="submit" class="btn btn-info">Add transaction</button>
-            <button type="reset" class="btn btn-info">Reset transaction</button>
+            <button type="submit" class="btn btn-info">Add</button>
+            <button type="reset" class="btn btn-info">Reset</button>
         </div>
     </form>
 </div>
