--- a/views/editTrans.hbs
+++ b/views/editTrans.hbs
@@ -31,7 +31,7 @@
                 class="create-form-item">
         </div>
         <div>
-            <button type="submit" class="btn btn-info">Edit transaction</button>
+            <button type="submit" class="btn btn-info">Save</button>
         </div>
     </form>
 </div>
