--- a/views/createTrans.hbs
+++ b/views/createTrans.hbs
@@ -33,14 +33,14 @@
             </select>
         </div>
         <div class="form-group">
-            <input type="number" step="0.01" name="amount" id="amount" class="create-form-item" placeholder="Amount">
+            <input type="number" step="0.01" min="0" name="amount" id="amount" class="create-form-item" placeholder="Amount">
         </div>
         <div class="form-group">
             <input type="date" name="date" id="date" required pattern="dd-mm-yyyy" class="create-form-item">
         </div>
         <div>
-            <button type="submit" class="btn btn-info">Add transaction</button>
-            <button type="reset" class="btn btn-info">Reset transaction</button>
+            <button type="submit" class="btn btn-info">Add</button>
+            <button type="reset" class="btn btn-info">Reset</button>
         </div>
     </form>
 </div>
