--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
                     <option value="clothing">Clothing</option>
                     <option value="education">Education</option>
                     <option value="healthcare">Healthcare</option>
-                    <option value="healthcare">Other</option>
+                    <option value="other">Other</option>
                 </select>
                 <button type="submit" class="btn btn-info filter-btn">Search</button>
             </form>
