--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,6 +154,7 @@ body {
 }
 
 
+
 .fa-nav-home, .fa-nav-create {
     color: white;
     margin-right: 200px;
@@ -255,6 +256,8 @@ footer p {
     border-radius: 5px;
     color: white;
     margin-top: 7%;
+    font-size: 15px;
+    font-weight: 500;
 }
 
 .google-btn:hover {
@@ -263,8 +266,8 @@ footer p {
 }
 
 .google-img {
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     background-color: white;
     border-radius: 5px;
     margin-right: 5px;
@@ -273,6 +276,7 @@ footer p {
 .landing-btn {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background: rgba(0, 0, 0, 0.7);
     padding: 3% 5%;
     border-radius: 7px;
@@ -281,7 +285,7 @@ footer p {
 .header-div {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 .header-tom {
