change balance name

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,7 +9,7 @@
         {{!-- Current balance --}}
         <div class="current-balance col-lg-4">
             <h2>{{currency}}</h2>
-            <small>Current balance</small>
+            <small>Balance</small>
         </div>
 
         {{!-- Filter --}}
