--- a/views/diagrams.hbs
+++ b/views/diagrams.hbs
@@ -8,7 +8,7 @@
 
     {{!-- import and use CHARTJS --}}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-
+    <title>&#36;how Me the Money</title>
 </head>
 
 <body>
